Fixed Scheduled Jobs Tab Invisible Issue

--- a/public/styles/css/dashboard.css
+++ b/public/styles/css/dashboard.css
@@ -168,7 +168,7 @@ pre {
   width: 90%;
 }
 
-#editSubmitBtnGrp {
+#editSubmitBtnGrp , #viewRecentJobLogBtn{
     padding-bottom:  0.5em;
 }
 
